--- a/index.html
+++ b/index.html
@@ -17,15 +17,7 @@
     </div>
 
     <p class="description">
-        This book provides practical, hands-on strategies for using ChatGPT to: <br>
-✅ Create engaging lesson plans, quizzes, and worksheets in minutes <br>
-✅ Personalize learning experiences for students of all levels <br>
-✅ Automate repetitive administrative tasks like attendance tracking and report writing <br>
-✅ Generate creative writing prompts, discussion topics, and problem-solving exercises <br>
-✅ Develop effective question papers, evaluation schemes, and feedback reports <br>
-✅ Streamline communication with students, parents, and school administrators <br>
-✅ Create structured school timetables, track student attendance, and manage data efficiently <br>
-✅ Get started instantly with 40 magical prompts that every teacher can use right away! <br>
+        Get the pdf for just 180/-
     </p>
 
     <button class="buy-button" id="buyNow">Buy Now</button>
