--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <button class="buy-button" id="buyNow">Buy Now</button>
 
     <!-- Hidden Download Button (Appears after payment) -->
-    <a id="downloadPdf" href="files/product.pdf" download class="download-button" style="display: none;">
+    <a id="downloadPdf" href="files/draft3.pdf" download class="download-button" style="display: none;">
         Download Your PDF
     </a>
 
